# carlos

./: Cargo.toml  README.md  build-web.sh  build.rs
driver/: Cargo.toml
driver/src/: lib.rs
fake-car/: Cargo.toml
fake-car/src/: lib.rs
presence/: Cargo.toml
presence/src/: main.rs
schema/: call.capnp  world.capnp
src/: lib.rs
web/: car.html  index.html  style.css
web/carlos/: driver.js  driver_bg.wasm  fake_car.js  fake_car_bg.wasm
web/components/: car.js  index.html
