[package]
name = "driver"
version = "0.1.0"
authors = ["daniel"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
carlos = { path = ".." }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "EventTarget",
  "Event",
  "RtcPeerConnection",
  "console",
  "WebSocket",
]
