[package]
name = "fake-car"
version = "0.1.0"
authors = ["daniel"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "SvgImageElement",
  "RtcPeerConnection",
  "console"
]
